# Case-Nubank

./: Makefile  README.md  pyproject.toml
notebooks/: experimentation.ipynb
src/api/: app.py
src/front/: app.py
src/train/: main.py
src/train/trainer/: trainer_orchestrator.py
src/train/trainer/components/dataloader/: dataloader.py
src/train/trainer/components/models/models_configuration/: models_configuration.py
src/train/trainer/components/models/models_manager/: models_manager.py
src/train/trainer/components/models/pipeline/: custom_pipeline.py
